larger page journey + front fixes on text spacing community

--- a/app/assets/stylesheets/components/_page_journey.scss
+++ b/app/assets/stylesheets/components/_page_journey.scss
@@ -1,5 +1,5 @@
 .journey-container {
-  width: 500px;
+  width: 800px;
   margin: auto;
   // border-right: 1px solid $black;
   // border-left: 1px solid $black;
