--- a/app/assets/stylesheets/pages/_community.scss
+++ b/app/assets/stylesheets/pages/_community.scss
@@ -8,6 +8,16 @@
     font-size: 24px;
     font-weight: 800;
     margin-bottom: 1.5em;
+    padding: 0 16px;
+  }
+
+  p {
+    padding: 0 16px;
+    margin: 0;
+  }
+
+  spam {
+    display: inline-block;
   }
 
   .construction-img {
